# rust_microservices

./: README.md
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: git_user.rs  mod.rs
infra/: .env  docker-compose.yml
infra/akhq/: application.yml
infra/postgres/: init.sql
infra/redpanda/: redpanda.yaml
infra/scripts/unix/: setup_hostname
migration/: Cargo.toml
migration/migrations/: V1__initial.sql
migration/src/: main.rs
migration/src/config/: env.rs
producer/: Cargo.toml
producer/src/: main.rs
producer/src/accessors/: github.rs  kafka.rs  mod.rs
producer/src/config/: env.rs
producer/src/models/: errors.rs
producer/src/services/: mod.rs  process_users.rs
users-app/: Cargo.toml  index.html
users-app/src/: main.rs
users-app/src/user/: detail.rs  list.rs
users-app/src/util/: utils.rs
web/: Cargo.toml
web/src/: main.rs
web/src/accessors/: db.rs  kafka.rs  mod.rs
web/src/config/: connection.rs  env.rs  kafka.rs  mod.rs
web/src/server/: handlers.rs  mod.rs  model.rs  routes.rs  server.rs
