[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# validation
validator = "0.14.0"
validator_derive = "0.14.0"

# serialization
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.48"
