[package]
name = "migration"
version = "0.1.0"
authors = ["Andrew Visokih <andrew.visokih@capsilon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
refinery = { version = "0.3", features = ["tokio-postgres"]}
tokio-postgres = "0.5.3"
# config from parameters/env
structopt = "0.3.23"
