[package]
name = "microservices"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3.17"
tokio={version = "1.11.0", features = ["full"]}

# For making (asynchronous) requests
reqwest = { version ="0.11.4", features = ["default", "json"] }
hyper = "0.14.13"    # needed bc reqwest does not reexport the status codes

# logger.
log = "0.4.14"
simple_logger = "1.13.0"

# config from parameters/env
structopt = "0.3.23"

# lib for kafka communication
rdkafka = "0.26.0"

# serialization
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.48"

#common module
common = { path = "../common" }
