[package]
name = "users-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
yew-router = "0.15.0"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
#common module
common = { path = "../common" }
