[package]
name = "microservices"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3.17"
tokio={version = "1.12.0", features = ["full"]}
tokio-postgres = "0.7.3"
deadpool-postgres = "0.9.0"

lazy_static="1.4.0"

#web
actix-web = "4.0.0-beta.1"
actix-rt = "2.2.0"

# logger.
env_logger = "0.9.0"
log = "0.4.14"
simple_logger = "1.13.0"

# config from parameters/env
structopt = "0.3.23"

# lib for kafka communication
rdkafka = "0.26.0"

# serialization
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.48"

#common module
common = { path = "../common" }

num_cpus = "1.13.0"

